--- a/start/about/about.css
+++ b/start/about/about.css
@@ -9,7 +9,7 @@
     width: 80%;
     margin: 0px auto;
     grid-row-gap: 1em;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: auto 1fr;
 }
 
 .top-nav {
