--- a/start/about/about.css
+++ b/start/about/about.css
@@ -63,3 +63,43 @@
     color: #FFF;
     padding: 3em;
 }
+
+.top-section {
+    width: 100%;
+    background-color: rgb(1, 131, 163);
+    height: 210px;
+    margin: 10px 0px;
+    overflow: hidden;
+}
+
+.top-inner-section {
+    overflow: auto;
+}
+
+.box-shadow {
+    -webkit-box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 1px 9px -1px rgba(0, 0, 0, 0.75);
+}
+
+.pic-container {
+    height: 100%;
+    float: left;
+    margin-right: 20px;
+}
+
+.pic-container>img {
+    object-fit: cover;
+    display: block;
+    width: 190px;
+    margin: 10px;
+}
+
+.h2-header {
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.p-white {
+    color: #FFF;
+}
